[package]
name = "balls"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.5.0"
bevy = { version = "0.18.0", features = ["dynamic_linking"] }
rand = "0.9.2"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
incremental = true
